crates/sotf-plugins/tests/snapshots/render_plan_snapshots__crossfeed__crossfeed__ipad_portrait.snap
---
source: crates/sotf-plugins/tests/render_plan_snapshots.rs
expression: plan
---
{
  "plugin_type": "crossfeed",
  "width": 768.0,
  "design_language": "neutral",
  "corner_radius_md": 8.0,
  "min_touch_target": 32.0,
  "toggle_variant": "capsule",
  "label_position": "below",
  "orientation": "horizontal",
  "knob_size": "sm",
  "group_direction": "row",
  "slider_height": 120.0,
  "show_visualizations": true,
  "columns_visible": [
    "main",
    "output"
  ],
  "columns_collapsed": [],
  "visible_group_ids": [
    "PRIMARY",
    "mode-selector",
    "MULTIBAND"
  ],
  "overflow_group_ids": [
    "head-tracking"
  ],
  "config_controls": [
    {
      "param_index": 1,
      "param_name": "Preset",
      "control_type": "selector",
      "unit": "",
      "range": [
        0.0,
        5.0
      ],
      "read_only": false,
      "enabled": true
    }
  ],
  "main_groups": [
    {
      "id": "PRIMARY",
      "title": "PRIMARY",
      "controls": [
        {
          "param_index": 2,
          "param_name": "Enabled",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 3,
          "param_name": "Mix",
          "control_type": "knob",
          "unit": "%",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 12,
          "param_name": "ITD Delay",
          "control_type": "knob",
          "unit": "ms",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        }
      ]
    },
    {
      "id": "mode-selector",
      "title": "MODE",
      "controls": [
        {
          "param_index": 0,
          "param_name": "Mode",
          "control_type": "button_set",
          "unit": "",
          "range": [
            0.0,
            4.0
          ],
          "read_only": false,
          "enabled": true
        }
      ]
    },
    {
      "id": "MULTIBAND",
      "title": "MULTIBAND",
      "controls": [
        {
          "param_index": 7,
          "param_name": "MB Low Freq",
          "control_type": "knob",
          "unit": "Hz",
          "range": [
            50.0,
            500.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 8,
          "param_name": "MB Mid/High Freq",
          "control_type": "knob",
          "unit": "Hz",
          "range": [
            2000.0,
            15000.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 9,
          "param_name": "MB Low Feed",
          "control_type": "knob",
          "unit": "dB",
          "range": [
            -60.0,
            15.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 10,
          "param_name": "MB Mid Feed",
          "control_type": "knob",
          "unit": "dB",
          "range": [
            -60.0,
            15.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 11,
          "param_name": "MB High Feed",
          "control_type": "knob",
          "unit": "dB",
          "range": [
            -60.0,
            15.0
          ],
          "read_only": false,
          "enabled": true
        }
      ]
    },
    {
      "id": "head-tracking",
      "title": "HEAD TRACKING",
      "controls": [
        {
          "param_index": 17,
          "param_name": "Head Yaw",
          "control_type": "knob",
          "unit": "deg",
          "range": [
            -90.0,
            90.0
          ],
          "read_only": false,
          "enabled": true
        }
      ]
    }
  ],
  "output_controls": [
    {
      "param_index": 14,
      "param_name": "Target LUFS",
      "control_type": "knob",
      "unit": "LUFS",
      "range": [
        -40.0,
        -12.0
      ],
      "read_only": false,
      "enabled": false
    },
    {
      "param_index": 13,
      "param_name": "Auto Gain",
      "control_type": "toggle",
      "unit": "",
      "range": [
        0.0,
        1.0
      ],
      "read_only": false,
      "enabled": true
    },
    {
      "param_index": 15,
      "param_name": "Max Gain",
      "control_type": "knob",
      "unit": "dB",
      "range": [
        0.0,
        24.0
      ],
      "read_only": false,
      "enabled": false
    },
    {
      "param_index": 16,
      "param_name": "Smoothing",
      "control_type": "knob",
      "unit": "ms",
      "range": [
        10.0,
        5000.0
      ],
      "read_only": false,
      "enabled": false
    }
  ],
  "tabs": [],
  "viz_slots": [],
  "dynamic_sections": []
}
